tests/snapshots/cli__dupes_human_exact_clone.snap
---
source: tests/cli.rs
expression: normalize(&output.stdout)
---
2 occurrences (103 tokens, 23 lines)
  PaymentService.cs:15:5-37:2
  ShippingService.cs:15:5-37:2

  15 │     }
  16 │ 
  17 │     private async Task ExecuteWithRetryAsync(Func<Task> action, int maxAttempts)
  18 │     {
  19 │         var attempt = 0;
  20 │ 
  21 │         while (true)
  22 │         {
  23 │             try
  24 │             {
  25 │                 await action();
  26 │                 return;
  27 │             }
  28 │             catch (Exception exception) when (attempt < maxAttempts)
  29 │             {
  30 │                 attempt++;
  31 │                 var delay = TimeSpan.FromSeconds(Math.Pow(2, attempt));
  32 │                 Console.WriteLine($"Retry {attempt} after {exception.Message}, waiting {delay}");
  33 │                 await Task.Delay(delay);
  34 │             }
  35 │         }
  36 │     }
  37 │ }

found 1 duplicate group · 46 duplicated lines — 1 project(s), 2 file(s) scanned in <n> ms
