tests/snapshots/cli__dupes_json_exact_clone.snap
---
source: tests/cli.rs
assertion_line: 197
expression: stdout
---
{
  "version": 1,
  "root": "<repo>/tests/fixtures/dupes_exact_clone",
  "mode": "exact",
  "summary": {
    "projects": 1,
    "filesScanned": 2,
    "groups": 1,
    "duplicatedLines": 48,
    "elapsedMs": 0
  },
  "groups": [
    {
      "tokenCount": 105,
      "lineCount": 24,
      "occurrences": [
        {
          "file": "ShippingService.cs",
          "startLine": 14,
          "startColumn": 26,
          "endLine": 37,
          "endColumn": 2
        },
        {
          "file": "PaymentService.cs",
          "startLine": 14,
          "startColumn": 26,
          "endLine": 37,
          "endColumn": 2
        }
      ]
    }
  ]
}
